[build-system]
requires = ["setuptools>=61.0",  "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pymultissher"
description = "pymultissher is a simple CLI tool that runs commands on multiple servers at once using SSH"
readme = "README.md"
version = "0.3.11"
authors = [
  {name = "vdmitriyev"}
]
maintainers = [
  {name = "vdmitriyev"}
]
dependencies = [
  "paramiko >=3.4.0",
  "click >=8.1.7",
  "typer >=0.12.3",
  "PyYAML >=6.0.1"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities"
]
license = {text = "MIT license"}


[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[entry_points]
console_scripts = ["pymultissher = pymultissher.__main__:app"]

[project.scripts]
pymultissher = "pymultissher.__main__:app"

[project.urls]

homepage = "https://github.com/vdmitriyev/pymultissher"
changelog = "https://github.com/vdmitriyev/pymultissher/blob/main/HISTORY.rst"
repository = "https://github.com/vdmitriyev/pymultissher.git"
documentation = "https://vdmitriyev.github.io/pymultissher/"

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.packages.find]
include = ["pymultissher"]
exclude = ["scripts*", "tests*", "example*", "docs*", "build", "tools", "site"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
